Remove blur bg because of performance issue on mobile.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+body {}
+
 :root {
     --body-max-width: 1200px;
     --section-margin-x: 2rem;
@@ -42,7 +44,12 @@ section {
 .text-max-lines-1 {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    display: -webkit-box;
+    line-clamp: 1;
+    -webkit-line-clamp: 1;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
 }
 
 .text-max-lines-2 {
@@ -208,13 +215,8 @@ ol.item-list {
     width: auto;
     margin: 0.25rem 0.25rem;
     border-radius: 0.25rem;
-    /* padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 0.25rem;
-    padding-right: 40px; */
-    padding: 8px 1rem 8px 0.25rem;
+    padding: 8px 0.5rem 8px 0.25rem;
     /* Leave trailing space button */
-    /* clear: both; */
     font-weight: 400;
     color: #212529;
     text-align: inherit;
@@ -303,7 +305,7 @@ ol.item-list {
     }
     #TopBreadcrumb ol li {
         /* Three items per row */
-        min-width: max(80px, calc(33.33% - 0.5rem)) !important;
+        /* min-width: max(80px, calc(33.33% - 0.5rem)) !important; */
     }
     #CategorySelector li a .name {
         font-size: 0.9rem;
@@ -312,7 +314,7 @@ ol.item-list {
         font-size: 0.8rem;
     }
     #ImageVideoContainer .container .btn .firstName {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
     /* #FolderContent.folder_content_default .video-preview {
         width: 120px;
