--- a/static/css/category_selector.css
+++ b/static/css/category_selector.css
@@ -1,4 +1,6 @@
-#CategorySelector {}
+#CategorySelector {
+    overflow-x: hidden;
+}
 
 #CategorySelector ul {
     justify-content: center;
@@ -6,6 +8,7 @@
 
 #CategorySelector .row {
     --bs-gutter-x: 0rem;
+    margin: 0 -30px !important;
 }
 
 #CategorySelector .col {
@@ -14,7 +17,6 @@
     --btn-border-start-color: var(--btn-background-color);
     --btn-border-end-color: var(--btn-background-color);
     position: relative;
-    overflow: hidden;
     height: 64px;
 }
 
@@ -23,8 +25,8 @@
 }
 
 #CategorySelector .col:nth-child(2) {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: -35px;
+    margin-right: -35px;
 }
 
 #CategorySelector .col a {
@@ -58,16 +60,16 @@
 }
 
 #CategorySelector ul li a:hover>.category-btn {
-    --btn-background-color: white;
+    --btn-background-color: var(--bs-gray-100);
     z-index: 10;
 }
 
 #CategorySelector ul li a:active>.category-btn {
-    --btn-background-color: white;
+    --btn-background-color: var(--bs-gray-100);
 }
 
 #CategorySelector ul li a:focus>.category-btn {
-    --btn-background-color: var(--bs-gray-100);
+    --btn-background-color: white;
 }
 
 #CategorySelector .category-btn {
@@ -101,6 +103,8 @@
     --btn-border-end-color: var(--bs-blue); */
     --btn-border-start-color: var(--gray-border-color);
     --btn-border-end-color: var(--gray-border-color);
+    /* shadow-sm */
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075)!important;
 }
 
 #CategorySelector .col.active .category-btn-all {
@@ -177,6 +181,7 @@
     /* font-size: 0.8rem; */
     display: block;
     line-height: 1.25rem;
+    font-size: 0.9rem;
 }
 
 #CategorySelector li.col.active .name {
