--- a/static/css/folder_content.css
+++ b/static/css/folder_content.css
@@ -1,25 +1,25 @@
-#FolderContent .item-list li a.item-icon-name {
-    position: relative;
-}
-
 #FolderContent #ImageVideoContainer {
     min-height: 40vh;
 }
 
-#FolderContent ul li {
+#FolderContent ul.item-list li {
     display: flex;
     border-bottom: 1px solid var(--gray-border-color);
 }
 
-#FolderContent ul li:last-child {
+#FolderContent ul.item-list li:last-child {
     border-bottom: none;
 }
 
-#FolderContent ul li a:active {
+#FolderContent ul.item-list li a:active {
     color: black;
 }
 
-#FolderContent ul li a.item-entry-type-folder::after {
+#FolderContent ul.item-list li a.item-icon-name {
+    position: relative;
+}
+
+#FolderContent ul.item-list li a.item-entry-type-folder::after {
     content: '';
     width: 20px;
     height: 20px;
@@ -33,17 +33,17 @@
     right: 10px;
 }
 
-#FolderContent ul li .btn-small {
+#FolderContent ul.item-list li .btn-small {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 0.25rem;
+    right: 0.25rem;
     height: 40px;
     width: 40px;
     display: flex;
     align-items: center;
 }
 
-#FolderContent ul li .btn-small::before {
+#FolderContent ul.item-list li .btn-small::before {
     content: '';
     width: 20px;
     height: 20px;
@@ -53,15 +53,15 @@
     background-size: cover;
 }
 
-#FolderContent ul li .btn-more::before {
+#FolderContent ul.item-list li .btn-more::before {
     background-image: url('/static/icons/three-dots-vertical.svg?static=1');
 }
 
-#FolderContent ul li .btn-x {
-    right: 40px;
+#FolderContent ul.item-list li .btn-x {
+    right: calc(40px + 0.25rem);
 }
 
-#FolderContent ul li .btn-x::before {
+#FolderContent ul.item-list li .btn-x::before {
     background-image: url('/static/icons/x.svg?static=1');
 }
 
@@ -113,23 +113,20 @@
 #FolderContent.folder_content_default .btn-preview-video .video-play {}
 
 #FolderContent.folder_content_default img.image-preview {
-    max-width: 30vw;
+    min-width: 30px;
+    max-width: min(120px, 30vw);
     max-height: 60px;
-    min-height: 40px;
 }
 
 #FolderContent.folder_content_default .music-preview {
-    max-width: 90px;
-    max-height: 90px;
-    min-width: 60px;
-    min-height: 60px;
+    width: 60px;
+    height: 60px;
 }
 
 #FolderContent.folder_content_default .video-preview {
     max-width: 120px;
-    max-height: 90px;
     min-width: 80px;
-    min-height: 60px;
+    height: 60px;
 }
 
 #FolderContent .video-preview .video-play {
@@ -202,27 +199,30 @@
 
 #ImageVideoContainer .col .container .btn .video-preview .video-play {
     position: absolute;
-    left: 10px;
-    bottom: 10px;
+    left: 5px;
+    bottom: 5px;
 }
 
 #ImageVideoContainer .col .container .btn .firstName {
-    /* padding: 0; */
-    /* text-align: center; */
-    font-size: 0.9rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
 }
 
 #ImageVideoContainer .col .container .btn .blur-bg {
-    background-size: cover;
+    /* display: none; */
+    background: var(--bs-gray-100);
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    /* background-size: cover;
     filter: blur(20px);
     top: -5%;
     left: -5%;
     width: 110%;
-    height: 110%;
+    height: 110%; */
     opacity: 0.5;
     z-index: 1;
 }
