--- a/static/css/preview_modal.css
+++ b/static/css/preview_modal.css
@@ -46,7 +46,7 @@
     display: flex;
     /* flex-grow: 1; */
     gap: 1rem;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     justify-content: center;
     align-items: stretch;
     align-content: center;
