--- a/static/css/top_breadcrumb.css
+++ b/static/css/top_breadcrumb.css
@@ -14,14 +14,14 @@
 #TopBreadcrumb ol li {
     /* flex-grow: 1;
   flex-shrink: 1; */
+    --btn-background-color: var(--bs-gray-200);
     border-radius: 0.5rem;
     /* border-radius: 0; */
-    background-color: var(--bs-gray-200);
+    background-color: var( --btn-background-color);
     min-width: 80px;
     /* At max width 2 pills are displayed in one row */
     max-width: min(300px, calc(50% - var(--breadcrumb-gap) / 2));
     /* height: 32px; */
-    --btn-background-color: var(--bs-gray-200);
     user-select: none;
 }
 
@@ -89,4 +89,8 @@
 
 #TopBreadcrumb ol li:last-child a>span {
     margin: 2px calc(0.5rem - 2px);
+}
+
+#TopBreadcrumb ol li:first-child.row-trailing-item a {
+    background-color: white;
 }
